introspection route
