# app/login/responses.go
@@ -6,14 +6,6 @@ type TokenResponse struct {
 	ExpiresIn   int64  `json:"expires_in"`
 }
 
-type IntrospectionResponse struct {
-	Scope     string `json:"scope"`
-	ClientID  string `json:"client_id"`
-	TokenType string `json:"token_type"`
-	ExpiresIn int64  `json:"expires_in"`
-	Active    bool   `json:"active"`
-}
-
 type SignKey struct {
 	KeyID     string `json:"key_id"`
 	Key       string `json:"public_key"`
@@ -23,4 +15,10 @@ type SignKey struct {
 
 type KeysResponse struct {
 	Keys []SignKey `json:"keys"`
+}
+
+type IntrospectionResponse struct {
+	Scope     string `json:"scope"`
+	ExpiresAt int64  `json:"exp"`
+	Active    bool   `json:"active"`
 }
